夫 媒體露出 img path update

--- a/css/media.css
+++ b/css/media.css
@@ -41,7 +41,7 @@
 }
 
 #media .title-img {
-    background-image: url(../images/nav/icon1-4.png);
+    background-image: url(../frontend-img/index-img/media/icon1-4.png);
     height: 32px;
     width: 32px;
     margin: 0px 4px 0px 0px;
