佑 媒體報導 img path update

--- a/css/news.css
+++ b/css/news.css
@@ -113,51 +113,51 @@
 }
 
 #news-img-1 {
-    background-image: url('../images/news/phpVQk4f5.jpg');
+    background-image: url('../frontend-img/index-img/news/phpVQk4f5.jpg');
 }
 
 #news-img-2 {
-    background-image: url('../images/news/phprmrWFO.jpg');
+    background-image: url('../frontend-img/index-img/news/phprmrWFO.jpg');
 }
 
 #news-img-3 {
-    background-image: url('../images/news/phpKEilAF.jpg');
+    background-image: url('../frontend-img/index-img/news/phpKEilAF.jpg');
 }
 
 #news-img-4 {
-    background-image: url('../images/news/php64EyLq.jpg');
+    background-image: url('../frontend-img/index-img/news/php64EyLq.jpg');
 }
 
 #news-img-5 {
-    background-image: url('../images/news/phpX4diFX.jpg');
+    background-image: url('../frontend-img/index-img/news/phpX4diFX.jpg');
 }
 
 #news-img-6 {
-    background-image: url('../images/news/phpMUc3mI.jpg');
+    background-image: url('../frontend-img/index-img/news/phpMUc3mI.jpg');
 }
 
 #news-img-7 {
-    background-image: url('../images/news/phpT0VQXn.jpg');
+    background-image: url('../frontend-img/index-img/news/phpT0VQXn.jpg');
 }
 
 #news-img-8 {
-    background-image: url('../images/news/phpxxcgIA.jpg');
+    background-image: url('../frontend-img/index-img/news/phpxxcgIA.jpg');
 }
 
 #news-img-9 {
-    background-image: url('../images/news/phpuOGcb5.jpg');
+    background-image: url('../frontend-img/index-img/news/phpuOGcb5.jpg');
 }
 
 #news-img-10 {
-    background-image: url('../images/news/phpZM6Iw9.jpg');
+    background-image: url('../frontend-img/index-img/news/phpZM6Iw9.jpg');
 }
 
 #news-img-11 {
-    background-image: url('../images/news/phpJOP34C.jpg');
+    background-image: url('../frontend-img/index-img/news/phpJOP34C.jpg');
 }
 
 #news-img-12 {
-    background-image: url('../images/news/phpO2v5pa.jpg');
+    background-image: url('../frontend-img/index-img/news/phpO2v5pa.jpg');
 }
 
 
