--- a/css/franchisee-form.css
+++ b/css/franchisee-form.css
@@ -1,7 +1,18 @@
-* {
+*{
     box-sizing: border-box;
+    font-family: Microsoft JhengHei;
+    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
 }
 
+body{
+    background-color: #0C1219;
+    margin: 0;
+    padding: 0;
+}
+
+a {
+    text-decoration: none;
+}
 #franchisee-form {
     /* height: calc(100vh - 109px); */
     width: 100%;
