--- a/css/distribution-confirm.css
+++ b/css/distribution-confirm.css
@@ -1,5 +1,7 @@
 * {
     box-sizing: border-box;
+    font-family: Microsoft JhengHei;
+    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
 }
 
 body {
