--- a/css/index.css
+++ b/css/index.css
@@ -657,7 +657,7 @@ h2 {
 }
 
 #distribution .swiper-button-next,
-.swiper-button-prev {
+#distribution .swiper-button-prev {
   color: #FFFFFF;
   width: 27px;
 }
