--- a/css/franchisee.css
+++ b/css/franchisee.css
@@ -72,6 +72,7 @@ a {
 #authorization .franchisee-logo-cn {
     color: white;
     font-size: 10px;
+    margin: 0;
 }
 
 #authorization .franchisee-logo-en {
