--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,11 +1,11 @@
-.blade-button{
+header .blade-button{
     background-color: transparent;
     border: 0;
     padding: 0;
     cursor: pointer;
 }
 
-.drop-blade-button{
+header .drop-blade-button{
     width: 100%;
     background-color: transparent;
     border: 0;
@@ -60,8 +60,11 @@ header .main-menu {
 }
 
 header .main-menu-text {
-    flex-wrap: wrap;
+    margin-left: 3px;
     text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
 }
 
 header .text-ch {
@@ -148,21 +151,12 @@ header .menu-distribution:hover,
 header .menu-classic:hover,
 header .menu-media:hover,
 header .menu-franchisee:hover {
-    /* padding: 8px 10px 8px 10px; */
+    padding: 8px 10px 11px 10px;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     border: 2px solid #f7dc83;
     color: #f7dc83;
-}
-header .menu-about:hover{
-    padding: 8px 10px 11px 10px;
-}
-header .menu-distribution:hover,
-header .menu-classic:hover,
-header .menu-media:hover,
-header .menu-franchisee:hover {
-    padding: 8px 10px 10px 10px;
 }
 
 header .about-link:hover .main-menu-text,
@@ -229,7 +223,6 @@ header img.social-menu-icon-ig {
 }
 
 header .mine-menu-btn {
-    /* width: 100%; */
     display: flex;
     align-items: center;
     justify-content: space-between;
