修改使用template button會透明的問題

--- a/public/css/backend-template.css
+++ b/public/css/backend-template.css
@@ -17,7 +17,7 @@ body{
     text-align: center;
 }
 
-#backend button{
+#backend .backend-buttons{
     border: 0;
     background-color: transparent;
 }
